# Ymir

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  vcpkg.json
.github/workflows/: build.yaml  nightly-release.yaml  stable-release.yaml
apps/: CMakeLists.txt
apps/ymir-dbg/: CMakeLists.txt
apps/ymir-dbg/src/: discovery.hpp  main.cpp
apps/ymir-dbg/src/protocol/: json_rpc_adapter.hpp  line_framer.hpp
apps/ymir-headless/: CMakeLists.txt
apps/ymir-headless/include/ymir/debug/protocol/: debug_command.hpp  debug_event.hpp  debug_result.hpp  debug_types.hpp  protocol_version.hpp
apps/ymir-headless/src/: config_parser.hpp  main.cpp
apps/ymir-headless/src/protocol/: json_rpc_adapter.hpp  line_framer.hpp
apps/ymir-ios/ymir-ios/: AudioOutput.swift  ContentView.swift  Info.plist  InputBridge.swift  LogStore.swift  MetalFramebufferView.swift  Shaders.metal  YmirApp.swift  YmirCore.swift  ymir-ios-Bridging-Header.h
apps/ymir-ios/ymir-ios.xcodeproj/: project.pbxproj
apps/ymir-ios/ymir-ios.xcodeproj/project.xcworkspace/xcuserdata/lennartk.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ymir-ios/ymir-ios.xcodeproj/xcshareddata/xcschemes/: ymir-ios.xcscheme  ymir-iosTests.xcscheme  ymir-iosTests.xctestplan
apps/ymir-ios/ymir-ios.xcodeproj/xcuserdata/lennartk.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/ymir-ios/ymir-ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/ymir-ios/ymir-ios/Tests/: CacheLogicTests.swift  OptionsTests.swift  ThreadSafetyTests.swift
apps/ymir-sdl3/: CMakeLists.txt
apps/ymir-sdl3/res/: io.github.strikerx3.ymir.xml
apps/ymir-sdl3/src/: main.cpp
apps/ymir-sdl3/src/app/: actions.hpp  app.cpp  app.hpp  display.hpp  settings.cpp  settings.hpp  settings_defaults.hpp  shared_context.cpp  shared_context.hpp
apps/ymir-sdl3/src/app/debug/: sh2_tracer.cpp  sh2_tracer.hpp
apps/ymir-sdl3/src/app/events/: emu_debug_event_factory.cpp  emu_debug_event_factory.hpp  emu_event_factory.cpp  emu_event_factory.hpp  gui_event.hpp  gui_event_factory.hpp
apps/ymir-sdl3/src/app/input/: input_action.hpp  input_context.cpp  input_context.hpp  input_events.cpp  input_events.hpp  input_primitives.cpp  input_primitives.hpp
apps/ymir-sdl3/src/app/services/savestates/: save_state_service.cpp  save_state_service.hpp
apps/ymir-sdl3/src/app/ui/views/debug/: sh2_debug_toolbar_view.cpp  sh2_debug_toolbar_view.hpp  sh2_disasm_dump_view.cpp  sh2_disasm_dump_view.hpp  sh2_disassembly_view.cpp  sh2_disassembly_view.hpp  sh2_flow_trace_model.hpp  sh2_flow_trace_view.cpp  sh2_flow_trace_view.hpp
apps/ymir-sdl3/src/app/ui/views/settings/: arcade_racer_config_view.cpp  audio_settings_view.cpp  general_settings_view.cpp  input_settings_view.cpp  ipl_settings_view.cpp  shuttle_mouse_config_view.cpp  shuttle_mouse_config_view.hpp  system_settings_view.cpp  tweaks_settings_view.cpp  video_settings_view.cpp  virtua_gun_config_view.cpp  virtua_gun_config_view.hpp
apps/ymir-sdl3/src/app/ui/widgets/: input_widgets.cpp  input_widgets.hpp  peripheral_widgets.cpp  settings_widgets.cpp  settings_widgets.hpp  unbound_actions_widget.cpp
apps/ymir-sdl3/src/app/ui/windows/: about_window.cpp  peripheral_config_window.cpp  peripheral_config_window.hpp  update_window.cpp
apps/ymir-sdl3/src/app/ui/windows/debug/: sh2_debugger_window.cpp  sh2_debugger_window.hpp  sh2_flow_trace_window.cpp  sh2_flow_trace_window.hpp
apps/ymir-sdl3/src/serdes/: state_cereal.hpp
apps/ymir-sdl3/src/util/: service_locator.hpp
docs/: PRIVACY_POLICY.md
docs/dev-notes/system-info/: sh1-pins.txt  vdp1-erase-swap-timings.txt
libs/ymir-core/: CMakeLists.txt
libs/ymir-core/include/ymir/: ymir_c.h
libs/ymir-core/include/ymir/core/: configuration.hpp
libs/ymir-core/include/ymir/debug/: sh2_tracer_base.hpp
libs/ymir-core/include/ymir/hw/scsp/: scsp.hpp  scsp_internal_callbacks.hpp
libs/ymir-core/include/ymir/hw/sh2/: sh2.hpp
libs/ymir-core/include/ymir/hw/smpc/: smpc.hpp  smpc_internal_callbacks.hpp
libs/ymir-core/include/ymir/hw/smpc/peripheral/: peripheral_base.hpp  peripheral_defs.hpp  peripheral_impl_analog_pad.hpp  peripheral_impl_arcade_racer.hpp  peripheral_impl_control_pad.hpp  peripheral_impl_mission_stick.hpp  peripheral_impl_null.hpp  peripheral_impl_shuttle_mouse.hpp  peripheral_impl_virtua_gun.hpp  peripheral_port.hpp  peripheral_report.hpp
libs/ymir-core/include/ymir/hw/vdp/: vdp.hpp  vdp2_defs.hpp  vdp2_regs.hpp  vdp_state.hpp
libs/ymir-core/include/ymir/state/: state_vdp.hpp
libs/ymir-core/include/ymir/sys/: bus.hpp  saturn.hpp  system_features.hpp
libs/ymir-core/include/ymir/util/: bit_ops.hpp  dev_log.hpp  virtual_memory.hpp
libs/ymir-core/src/ymir/: ymir_c.cpp
libs/ymir-core/src/ymir/core/: configuration.cpp
libs/ymir-core/src/ymir/hw/sh2/: sh2.cpp  sh2_decode.cpp  sh2_dispatch_map.inc
libs/ymir-core/src/ymir/hw/smpc/: smpc.cpp
libs/ymir-core/src/ymir/hw/smpc/peripheral/: peripheral_impl_analog_pad.cpp  peripheral_impl_arcade_racer.cpp  peripheral_impl_control_pad.cpp  peripheral_impl_mission_stick.cpp  peripheral_impl_shuttle_mouse.cpp  peripheral_impl_virtua_gun.cpp
libs/ymir-core/src/ymir/hw/vdp/: vdp.cpp
libs/ymir-core/src/ymir/hw/vdp/renderer/: vdp_renderer_sw.cpp
libs/ymir-core/src/ymir/sys/: saturn.cpp
libs/ymir-core/src/ymir/util/: virtual_memory.cpp
libs/ymir-dbg-commons/include/ymir/debug/util/: env.hpp
scripts/ios/: build_xcframework.sh
tests/ymir-core-tests/: CMakeLists.txt
tests/ymir-core-tests/src/hw/sh2/: sh2_block_cache_tests.cpp  sh2_flow_trace_tests.cpp
tests/ymir-core-tests/src/sys/: saturn_block_cache_observer_tests.cpp
tests/ymir-dbg-tests/: CMakeLists.txt
tests/ymir-dbg-tests/src/: protocol_tests.cpp  spawn_tests.cpp
tests/ymir-headless-tests/: CMakeLists.txt
tests/ymir-headless-tests/src/: protocol_tests.cpp
