if (Ymir_ENABLE_SANDBOX)
	add_subdirectory(ymir-sandbox)
endif ()
add_subdirectory(ymir-sdl3)
if (Ymir_ENABLE_YMDASM)
	add_subdirectory(ymdasm)
endif ()
if (Ymir_ENABLE_YMIR_HEADLESS OR Ymir_ENABLE_YMIR_DBG)
	add_library(ymir-headless-proto INTERFACE)
	add_library(ymir::ymir-headless-proto ALIAS ymir-headless-proto)
	target_include_directories(ymir-headless-proto
		INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ymir-headless/include>"
	)
	target_compile_features(ymir-headless-proto INTERFACE cxx_std_20)
endif ()
if (Ymir_ENABLE_YMIR_HEADLESS)
	add_subdirectory(ymir-headless)
endif ()
if (Ymir_ENABLE_YMIR_DBG)
	add_subdirectory(ymir-dbg)
endif ()
